# solana-test

./: .gitignore  Cargo.toml  code.txt
task1/: Cargo.toml  config.yaml
task1/src/: main.rs
task2/: Cargo.toml  config.yaml  wallet1.json  wallet2.json  wallet3.json  wallet4.json
task2/src/: main.rs
task3/: Cargo.toml  config.yaml  server.pem  wallet1.json
task3/proto/: geyser.proto
task3/src/: main.rs  solana.rs
task3_2/: Cargo.toml
task3_2/src/: main.rs
task4/: README.md  TESTS.md
task4/client/: Cargo.toml
task4/client/src/: main.rs
task4/client1/: Cargo.toml
task4/client1/src/: main.rs
task4/program/: Cargo.toml
task4/program/src/: entrypoint.rs  instruction.rs  lib.rs  processor.rs  state.rs
task4/program/tests/: integration_test.rs
task4/program1/: Cargo.toml
task4/program1/src/: instruction.rs  processor.rs  state.rs
task4/program1/tests/: integration_test.rs
