[package]
name = "task3"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.15.11"
futures = "0.3.31"
prost = "0.13.5"
prost-types = "0.13.5"
serde = { version = "1.0.219", features = ["derive"] }
solana-client = "2.2.3"
solana-sdk = "2.2.1"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots", "tls-roots"] }
rustls = "0.21"
rustls-native-certs = "0.6"
dotenv = "0.15.0"
anyhow = "1.0.97"


[build-dependencies]
tonic-build = "0.12.3"


