[package]
name = "task3_2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
config = "0.15.11"
dotenv = "0.15.0"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
solana-client = "2.2.3"
solana-sdk = "2.2.1"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
tonic = "0.12.3"
yellowstone-grpc-client = "6.0.0"
yellowstone-grpc-proto = "6.0.0"
