[package]
name = "program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "1.5.5"
solana-program = "2.2.1"

[dev-dependencies]
solana-program-test = "2.2.3"
tokio = { version = "1.44.1", features = ["full"] }
solana-sdk = "2.2.1"

[features]
no-entrypoint = []


